# eCTF-2025-MSU

./: .gitignore  README.md
.github/workflows/: rust.yml
decoder/: Cargo.toml  Dockerfile  README.md  build-script  build.rs  firmware.ld  memory.x
decoder/.cargo/: config.toml
decoder/build_out/: max78000bin
decoder/src/: decoder.c  main.rs  simple_uart.c
decoder/src/modules/: channel_manager.rs  constants.rs  flash_manager.rs  hostcom_manager.rs  mod.rs
decoder_bak/: Dockerfile
design/: pyproject.toml
design/ectf25_design/: __init__.py  encoder.py  gen_secrets.py  gen_subscription.py
design/ectf25_design/testing/: __init__.py
docs/src/: main.tex
frames/: x_c3.json
rustdev/: Cargo.toml  Dockerfile  build-script  build.rs  gdb_out2.txt  gdb_script.gdb  memory.x  openocd.gdb
rustdev/debugging/: flashctrl.py
rustdev/examples/: flash-simple.rs  flash.rs  hashy.rs  list-test.rs
rustdev/src/: lib.rs  main.rs
rustdev/src/modules/: channel_manager.rs  decode_manager.rs  flash_manager.rs  hostcom_manager.rs  mod.rs
rustdev_v1/src/: host_messaging.rs
rustdev_v1/tools/ectf25/utils/: stress_test.py
testing-app/: main.py
tools/: pyproject.toml
tools/ectf25/uplink/: __init__.py  __main__.py
tools/ectf25/utils/: decoder.py  stability_test.py  stress_test.py  test_decode.py
tools/ectf25/utils/testing/: __init__.py
