[package]
name = "{{project-name}}"
authors = ["{{authors}}"]
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["thumbv7em-none-eabihf"]

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-sp", "set-vtor"] }
embedded-hal-nb = "1.0.0"
embedded-io = "0.6.1"
max7800x-hal = "0.5.1"
panic-halt = "1.0.0"
rand = { version = "0.8.5", default-features = false }

# Uncomment if you want to use semihosting
# cortex-m-semihosting = "0.5"
